# Baldin

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: main.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: button.component.tsx
frontend/src/services/: api.ts  user.service.ts
